# client-api

./: .gitignore  COMPONENTS.md  IAINNOTES.txt  NEW_COMPONENTS.md  Pipfile  README.md  SETUP.md  create_new_component_study.py  create_new_study_example.py  create_new_study_example2.py  create_study_example.py  create_user.py  delete_studies.py  delete_study.py  dump_participation.py  dump_results.py  env.yaml.template  example.py  example_helpers.py  examples_base.py  examples_default.py  experiment_events.csv  extract_component_definitions.py  freetexttest.xml  from_experiment_xml.py  likertscaletest.xml.full.py  likertscaletest.xml.py  list-users.py  list_users.py  local.yaml  parse_tobii.py  pdprint.py  prod.yaml  pyproject.toml  requirements.txt  signer.py
Testcases/: Testcase_Headers.py  Testcase_TrialOrder_anonymous.py  Testcase_TrialOrder_anonymous_nouser.py  Testcase_checkboxgroup.py  Testcase_completioncode.py  Testcase_headers.py  Testcase_instrument_stimuli.py  Testcase_radiobutton.py  Testcase_textblock.py  Testcase_video_stimuli.py  Testcase_video_stimuli_timing.py  Testcase_webgazer.py  random-and-completion-code.py  video-stimuli-timing.py
cockpit_test_experiments/: a9f56a58-aaaa-eeee-1355-aa435ed70001.xml  a9f56a58-bbbb-eeee-1355-aa435ed70001.xml  a9f56a58-bbbb-eeee-1355-aa435ed70002.xml  a9f56a58-bbbb-eeee-1355-aa435ed70003.xml  a9f56a58-bbbb-eeee-1355-aa435ed70004.xml  dtu_emotion_likert_001_e3cc09b6-f3ee-af3c-0001-000000000001.xml  (+17 more)
pyelicit/: __init__.py  elicit.py  pyproject.toml
pyelicit/api/: __init__.py  elicit_api.py  elicit_creds.py
(+173 files in other folders)
