[tool.poetry]
name = "pyelicit"
version = "0.1.0"
description = "A Python client library for interacting with the Elicit API."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/pyelicit"
repository = "https://github.com/yourusername/pyelicit"
keywords = ["elicit", "API", "client", "swagger"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.0"
PyYAML = "^6.0"
pandas = "^1.4.0"
lxml = "^4.9.0"
nltk = "^3.7"
numpy = "^1.22.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
isort = "^5.10.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"